tests/specs/run/bare_specifier_without_import/main.out
error: Relative import path "@std/dotenv/load" not prefixed with / or ./ or ../
    at [WILDCARD]bare_specifier_without_import/main.ts:1:8

  hint: Try adding this specifier to `deno.json` or runnning `deno add @std/dotenv/load`
